--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -61,6 +61,10 @@ footer {
   white-space: pre-wrap;
 }
 
+.current-date {
+  column-width: 50px;
+}
+
 .time-block{
   text-align: center;
   border-radius: 15px;
