--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -41,8 +41,8 @@ footer {
   text-align: center;
 }
 
-a {
-  
+p {
+  display: inline !important;  
 }
 
 .custom-jumbotron,
@@ -87,7 +87,7 @@ a {
   border-top: 1px dashed var(--color2);
 }
 
-.past {
+/* .past {
   background-color: var(--color5);
   color: var(--color1);
 }
@@ -100,7 +100,7 @@ a {
 .future {
   background-color:var(--color3);
   color: var(--color2);
-}
+} */
 
 .saveBtn {
   border-left: 1px solid var(--color2);
