scratched project, changed to simple

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,12 @@
   --font1: 'Nunito Sans', sans-serif;  
   --font2: 'Prompt', sans-serif;
   --color1: bisque;
-  --color2: rgb(48, 39, 39); /* $orange-900*/
-  --color3: rgb(201, 100, 50); /* $orange-600*/
+  --color2: rgb(48, 39, 39); 
+  --color3: rgb(201, 100, 50); 
   --color4: rgb(209, 178, 143);
   --color5: rgb(109, 129, 82);
   --color6: #7b1fb1;
-  --color7: rgb(65, 17, 75);
-
-*{
-  padding: 0px;
-}
+  
 
 body {
   font-family: var(--font1);
@@ -20,13 +16,7 @@ body {
   background-color: var(--color4);
 }
 
-h1, h2, h3, h4 {
-  font-family: var(--font2);
-  font-weight: bold;
-  background-color: var(--color2)
-}
-
-thead{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -35,21 +25,8 @@ thead{
   padding: 10px;
 }
 
-footer {
-  padding: 30px;
-  clear: both;
-  text-align: center;
-}
-
-p {
-  display: inline !important;  
-}
-
-.custom-jumbotron,
-.card-header,
-.hourly-card .info-box-footer,
-.custom-modal .modal-header,
-.custom-modal .modal-footer {
+.jumbotron {
+  font-family: var(--font1);
   text-align: center;
   background-color: transparent;
   color: var(--color2);
@@ -57,28 +34,20 @@ p {
   border-bottom: 10px solid var(--color2);
 }
 
-.card-header {
-  background-color: var(--color2);
-}
-
-.description{
+.description {
   white-space: pre-wrap;
 }
 
-.current-date {
-  column-width: 50px;
-}
-
-.time-block{
+.time-block {
   text-align: center;
   border-radius: 15px;
 }
 
 .row {
+  font-family: var(--font2);
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid var(--color1);
-  --bs-fuutr-x: 5.5rem;
 }
 
 .hour {
@@ -87,32 +56,31 @@ p {
   border-top: 1px dashed var(--color2);
 }
 
-/* .past {
-  background-color: var(--color5);
+.past {
+  background-color: var(--color4);
   color: var(--color1);
 }
 
 .present {
-  background-color: var(--color4);
-  color:var(--color1);
+  background-color: var(--color3);
+  color: var(--color1);
 }
 
 .future {
-  background-color:var(--color3);
-  color: var(--color2);
-} */
+  background-color: var(--color5);
+  color: var(--color1);
+}
 
 .saveBtn {
   border-left: 1px solid var(--color2);
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #7b1fb1;
+  background-color: var(--color6);
   color: var(--color1);
 }
 
 .saveBtn i:hover {
   font-size: 20px;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
-.saveBtn i:active{
-color: rgb(65, 17, 75);
+
