--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,82 +1,55 @@
-:root {
-  --font1: 'Nunito Sans', sans-serif;  
-  --font2: 'Prompt', sans-serif;
-  --color1: bisque;
-  --color2: rgb(48, 39, 39); 
-  --color3: rgb(201, 100, 50); 
-  --color4: rgb(209, 178, 143);
-  --color5: rgb(109, 129, 82);
-  --color6: #7b1fb1;
+[class*= body] {
+  background-color: rgb(209, 178, 143);
+}
   
 
-body {
-  font-family: var(--font1);
-  font-size: 20px;
-  line-height: 1;
-  background-color: var(--color4);
+[class*= past] {
+  background-color: rgb(109, 129, 82);
+  color: bisque;
 }
 
-textarea {
-  background: transparent;
-  border: none;
-  resize: none;
-  color: var(--color2);
-  border-left: 1px solid var(--color2);
-  padding: 10px;
+[class*= present] {
+  background-color: rgb(201, 100, 50);
+  color: bisque;
 }
 
-.jumbotron {
-  font-family: var(--font1);
+[class*= future] {
+  background-color: #7b1fb1;
+  color: bisque;
+}
+
+[class*= jumbotron] {
+  font-family: 'Nunito Sans', sans-serif;
   text-align: center;
-  background-color: transparent;
-  color: var(--color2);
+  background-color: rgb(48, 39, 39);
+  color: bisque;
   border-radius: 0;
-  border-bottom: 10px solid var(--color2);
 }
 
-.description {
-  white-space: pre-wrap;
-}
-
-.time-block {
+[class*= time-block] {
   text-align: center;
   border-radius: 15px;
 }
 
-.row {
-  font-family: var(--font2);
+[class*= row] {
+  font-family: 'Prompt', sans-serif;
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid var(--color1);
+  border-top: 1px solid bisque;
 }
 
-.hour {
-  background-color: var(--color1);
-  color: var(--color2);
-  border-top: 1px dashed var(--color2);
+[class*= hour-block] {
+  background-color: bisque;
+  color: rgb(48, 39, 39);
+  border-top: 1px dashed rgb(48, 39, 39);
 }
 
-.past {
-  background-color: var(--color4);
-  color: var(--color1);
-}
-
-.present {
-  background-color: var(--color3);
-  color: var(--color1);
-}
-
-.future {
-  background-color: var(--color5);
-  color: var(--color1);
-}
-
-.saveBtn {
-  border-left: 1px solid var(--color2);
+[class*= saveBtn] {
+  border-left: 1px solid rgb(48, 39, 39);
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: var(--color6);
-  color: var(--color1);
+  background-color: #7b1fb1;
+  color: bisque;
 }
 
 .saveBtn i:hover {
